Infra/global/K8s/Base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gametemplate-server
  labels:
    app: gametemplate-server
spec:
  type: LoadBalancer
  selector:
    app: gametemplate-server
  ports:
    - name: game-udp
      port: 7777
      targetPort: 7777
      protocol: UDP
    - name: game-tcp
      port: 7777
      targetPort: 7777
      protocol: TCP
